Learning text styling

--- a/cssTips.html
+++ b/cssTips.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Css Practice</title>
-    <link href="css/styles.css" type="text/css"  rel="stylesheet" />
+    <link href="css/Practice.css" type="text/css"  rel="stylesheet" />
   </head>
   <body>
     <div class="colors">
@@ -28,10 +28,34 @@
 
       </div>
 
-      <div class="Opacity">
-        <div id="Sqr1"></div>
-        <div id="Sqr2"></div>
+      <div class="opacity">
+        <h1>Opacity</h1>
+        <div id="sqr1"></div>
+        <div id="sqr2"></div>
       </div>
+
+      <div class="text">
+        <h1>Text</h1>
+        <article class="example">
+          <p id="txthead">WebStorm</p>
+          <p><span id="name">JetBrains WebStorm</span> — интегрированная среда
+            разработки на <span id="langs">JavaScript, CSS & HTML</span> от
+            компании JetBrains, разработанная на основе платформы IntelliJ IDEA.</p>
+          <p id="newline" >WebStorm обеспечивает автодополнение, анализ кода на лету, навигацию
+            по коду, рефакторинг, отладку, и интеграцию с системами управления версиями.
+            Важным преимуществом интегрированной среды разработки WebStorm является
+            работа с проектами (в том числе, рефакторинг кода JavaScript, находящегося
+            в разных файлах и папках проекта, а также вложенного в HTML).
+            Поддерживается множественная вложенность (когда в документ на HTML
+            вложен скрипт на Javascript, в который вложен другой код HTML,
+            внутри которого вложен Javascript) — то есть в таких конструкциях
+            поддерживается корректный рефакторинг.</p>
+        </article>
+      </div>
+
+      
+
+
 
   </body>
 </html>
