--- a/cssTips.html
+++ b/cssTips.html
@@ -53,7 +53,36 @@
         </article>
       </div>
 
-      
+      <div class="boxes">
+        <h1>Boxes</h1>
+        <div class="box" >
+          <p>The Moog company pioneered the commercial
+          manufacture of modular voltage-controlled
+          analog synthesizer systems in the early
+          1950s.</p>
+        </div>
+
+        <table>
+          <tr >
+            <td class="fst">Hi, I'm your first cell.</td>
+            <td>I'm your second cell.</td>
+            <td>I'm your third cell.</td>
+            <td>I'm your fourth cell.</td>
+          </tr>
+          <tr>
+            <td>Breed</td>
+            <td>Jack Russell</td>
+            <td>Poodle</td>
+            <td>Streetdog</td>
+            <td>Cocker Spaniel</td>
+          </tr>
+        </table>
+
+
+      </div>
+
+
+
 
 
 
