Learning some JS. Created a local host server =)

--- a/cssTips.html
+++ b/cssTips.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Css Practice</title>
-    <link href="css/Practice.css" type="text/css"  rel="stylesheet" />
+    
   </head>
   <body>
+    <link href="css/Practice.css" type="text/css"  rel="stylesheet" />
+
     <div class="colors">
       <h1>Colors</h1>
       <div class="foreground">
@@ -84,7 +86,15 @@
 
 
 
+      <!-- Page Content -->
+      <input type="button" value="Debug" onclick="debbug(true)" 
+      style="
+      position: absolute;
+      border: black;
+      left: 50%;
+      margin: 20px;" />
+      
 
-
+      <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
