Learned boxes in CSS

--- a/cssTips.html
+++ b/cssTips.html
@@ -9,7 +9,7 @@
     <link href="css/Practice.css" type="text/css"  rel="stylesheet" />
 
     <div class="colors">
-      <h1>Colors</h1>
+      <h1 class="header">Colors</h1>
       <div class="foreground">
         <h2>Marine Biology</h2>
         <h3>The Composition of Seawater</h3>
@@ -27,74 +27,200 @@
             so there can be a lot of differences between seawater in one region
             and another. However, some general trends exist.</p>
           </div>
+    </div>
 
+    <div class="opacity">
+      <h1 class="header">Opacity</h1>
+      <div id="sqr1"></div>
+      <div id="sqr2"></div>
+    </div>
+
+    <div class="text">
+      <h1 class="header">Text</h1>
+      <article class="example">
+        <p id="txthead">WebStorm</p>
+        <p><span id="name">JetBrains WebStorm</span> — интегрированная среда
+          разработки на <span id="langs">JavaScript, CSS & HTML</span> от
+          компании JetBrains, разработанная на основе платформы IntelliJ IDEA.</p>
+        <p id="newline" >WebStorm обеспечивает автодополнение, анализ кода на лету, навигацию
+          по коду, рефакторинг, отладку, и интеграцию с системами управления версиями.
+          Важным преимуществом интегрированной среды разработки WebStorm является
+          работа с проектами (в том числе, рефакторинг кода JavaScript, находящегося
+          в разных файлах и папках проекта, а также вложенного в HTML).
+          Поддерживается множественная вложенность (когда в документ на HTML
+          вложен скрипт на Javascript, в который вложен другой код HTML,
+          внутри которого вложен Javascript) — то есть в таких конструкциях
+          поддерживается корректный рефакторинг.</p>
+      </article>
+    </div>
+
+    <div class="boxes">
+      <h1 class="header">Boxes</h1>
+      <div class="box" >
+        <p>The Moog company pioneered the commercial
+        manufacture of modular voltage-controlled
+        analog synthesizer systems in the early
+        1950s.</p>
       </div>
 
-      <div class="opacity">
-        <h1>Opacity</h1>
-        <div id="sqr1"></div>
-        <div id="sqr2"></div>
-      </div>
+      <table>
+        <tr >
+          <td class="fst">Hi, I'm your first cell.</td>
+          <td>I'm your second cell.</td>
+          <td>I'm your third cell.</td>
+          <td>I'm your fourth cell.</td>
+        </tr>
+        <tr>
+          <td>Breed</td>
+          <td>Jack Russell</td>
+          <td>Poodle</td>
+          <td>Streetdog</td>
+          <td>Cocker Spaniel</td>
+        </tr>
+      </table>
 
-      <div class="text">
-        <h1>Text</h1>
-        <article class="example">
-          <p id="txthead">WebStorm</p>
-          <p><span id="name">JetBrains WebStorm</span> — интегрированная среда
-            разработки на <span id="langs">JavaScript, CSS & HTML</span> от
-            компании JetBrains, разработанная на основе платформы IntelliJ IDEA.</p>
-          <p id="newline" >WebStorm обеспечивает автодополнение, анализ кода на лету, навигацию
-            по коду, рефакторинг, отладку, и интеграцию с системами управления версиями.
-            Важным преимуществом интегрированной среды разработки WebStorm является
-            работа с проектами (в том числе, рефакторинг кода JavaScript, находящегося
-            в разных файлах и папках проекта, а также вложенного в HTML).
-            Поддерживается множественная вложенность (когда в документ на HTML
-            вложен скрипт на Javascript, в который вложен другой код HTML,
-            внутри которого вложен Javascript) — то есть в таких конструкциях
-            поддерживается корректный рефакторинг.</p>
+
+      <article id="maxH">
+        <h2>Fender Mustang</h2>
+        <p>The Fender Mustang was introduced in 1964 as the
+        basis of a major redesign of Fender's.Seawater is composed of a variety of salts, organisms/biomass, water (of course), and other components. It is not homogenous, so there can be a lot of differences between seawater in one region and another. However, some general trends exist.</p>
+        <h2>Fender Stratocaster.</h2>
+        <p>The Fender Stratocaster or "Strat" is one of the
+        most popular electric guitars of all time. Seawater is composed of a variety of salts, organisms/biomass, water (of course), and other components. It is not homogenous, so there can be a lot of differences between seawater in one region and another. However, some general trends exist.</p>
+        <h2>Gibson Les Paul</h2>
+        <p>The Gibson Les Paul is a solid body electric
+        guitar that was first sold in 1952.Seawater is composed of a variety of salts, organisms/biomass, water (of course), and other components. It is not homogenous, so there can be a lot of differences between seawater in one region and another. However, some general trends exist.</p>
+      </article>
+
+      <article id="ovrfl">
+        <h2>Fender Mustang</h2>
+        <p class="one">The Fender Mustang was introduced in 1964 as the
+        basis of a major redesign of Fender's.Seawater is composed of a variety of salts, organisms/biomass, water (of course), and other components. It is not homogenous, so there can be a lot of differences between seawater in one region and another. However, some general trends exist.</p>
+        <h2>Fender Stratocaster.</h2>
+        <p class="two">The Fender Stratocaster or "Strat" is one of the
+        most popular electric guitars of all time. Seawater is composed of a variety of salts, organisms/biomass, water (of course), and other components. It is not homogenous, so there can be a lot of differences between seawater in one region and another. However, some general trends exist.</p>        
+      </article>
+
+      <div id="border">
+        <h2>Borders</h2> 
+        <article id="borderW">
+          <p class="one">Hohner's "Clavinet" is essentially an
+          electric clavichord.</p>
+          <p class="two">Hohner's "Clavinet" is essentially an
+          electric clavichord.</p>
+          <p class="three">Hohner's "Clavinet" is essentially
+          an electric clavichord.</p>
         </article>
-      </div>
 
-      <div class="boxes">
-        <h1>Boxes</h1>
-        <div class="box" >
-          <p>The Moog company pioneered the commercial
-          manufacture of modular voltage-controlled
-          analog synthesizer systems in the early
-          1950s.</p>
+        <div id="borderS"> 
+          <p class="one">solid</p>
+          <p class="two">dotted</p>
+          <p class="three">dashed</p>
+          <p class="four">double</p>
+          <p class="five">groove</p>
+          <p class="six">ridge</p>
+          <p class="seven">inset</p>
+          <p class="eight">outset</p>
+          <p class="color">colored</p> 
+          <p class="rounded">rounded</p>     
         </div>
 
-        <table>
-          <tr >
-            <td class="fst">Hi, I'm your first cell.</td>
-            <td>I'm your second cell.</td>
-            <td>I'm your third cell.</td>
-            <td>I'm your fourth cell.</td>
-          </tr>
-          <tr>
-            <td>Breed</td>
-            <td>Jack Russell</td>
-            <td>Poodle</td>
-            <td>Streetdog</td>
-            <td>Cocker Spaniel</td>
-          </tr>
-        </table>
-
+        <h3>Elliptical Shapes</h3> 
+        <div id="shapes"> 
+          <p class="one"></p>
+          <p class="two"></p>
+          <p class="three"></p>    
+        </div>
 
       </div>
 
 
+      <div id="padding">
+        <h2>Padding</h2>
+        <p>Analog synths produce a wave sound, whereas the
+          sounds stored on a digital synth have been
+          sampled and then turned into numbers.</p>
+        <p class="pad">Analog synths produce a wave sound, whereas the
+          sounds stored on a digital synth have been
+          sampled and then turned into numbers.</p>
+      </div>
 
+      <div id="margin">
+        <h2>Margin</h2>
+        <p>Analog synths produce a wave sound, whereas the
+          sounds stored on a digital synth have been
+          sampled and then turned into numbers.</p>
+        <p class="marg">Analog synths produce a wave sound, whereas the
+          sounds stored on a digital synth have been
+          sampled and then turned into numbers.</p>
+      </div>
 
-      <!-- Page Content -->
-      <input type="button" value="Debug" onclick="debbug(true)" 
-      style="
-      position: absolute;
-      border: black;
-      left: 50%;
-      margin: 20px;" />
-      
+      <div id="centering">
+        <h2>Centering Content</h2>
 
-      <script type="text/javascript" src="scripts/main.js"></script>
+        <article>
+          <p>Analog synthesizers are often said to have a
+          "warmer" sound than their digital
+          counterparts.</p>
+          <p class="cntr">Analog synthesizers are often
+          said to have a "warmer" sound than their
+          digital counterparts.</p>
+
+        </article>
+
+      </div>
+
+      <div id="displaying">
+        <h2>Inline/Block</h2>
+        <ul>
+          <li>Home</li>
+          <li>Products</li>
+          <li class="coming-soon">Products</li>
+          <li>Services</li>
+          <li>Contact</li>
+        </ul>        
+      </div>
+
+      <div id="shadow">
+        <h2>Shadow</h2>        
+        <div id="shadowSqr"></div>
+
+      </div>
+
+    </div>  
+
+    <!-- Page Content -->
+    <input type="button" value="Debug" onclick="debbug(true)" 
+    style="
+    position: absolute;
+    border: 2px solid black;
+    left: 50%;
+    margin: 20px;" />    
+
+    <script>
+      var debbug = function(confirm){
+        if (confirm){
+          var sS=document.styleSheets[0];
+          var rules = sS.cssRules?sS.cssRules:ss.rules;   
+
+          var Outlines=["* { outline: 2px dotted red; }",
+                    "* * { outline: 2px dotted green; }",
+                    "* * * { outline: 2px dotted orange; }",
+                    "* * * * { outline: 2px dotted blue; }",
+                    "* * * * * { outline: 1px solid red; }",
+                    "* * * * * * { outline: 1px solid black; }",
+                    "* * * * * * * { outline: 1px solid orange; }",
+                    "* * * * * * * * { outline: 1px solid blue; }"];         
+
+          for (i in Outlines) {
+            console.log(Outlines[i]);
+            sS.insertRule(Outlines[i], rules.length);
+          }   
+        }
+
+        else{}
+      }
+    </script>
+
   </body>
 </html>
