Learned some stuff

--- a/jsTips.html
+++ b/jsTips.html
@@ -3,8 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>JS Practice</title>
+    <link rel="stylesheet" href="css/jsPractice.css">
   </head>
   <body>
+    <div class="console">
+    </div>
+
+    <div class="menu" id="main">
+      <ul>
+        <li><input type="submit" value="Generate"></li>
+        <li><input type="submit" value="Sort"></li>
+        <li><input type="submit" value="Show"></li>
+        <li><input type="submit" value="About"></li>
+      </ul>
+
+      <div class="sizeDefiner">
+        <div class="line"></div>
+        <input class="button" type="submit" value="">
+      </div>
+
+    </div>
 
 
 
